--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,44 +1,48 @@
+image: "debian:sid"
+
+before_script:
+  - apt-get update
+  - apt-get -y install clang cmake libcmocka0 libcmocka-dev valgrind libyang1 libyang-dev sysrepo libsysrepo-dev
+
+  # resolve time issues
+  - ln -snf /usr/share/zoneinfo/Europe/Zagreb /etc/localtime && echo 'Europe/Zagreb' > /etc/timezone
+
 stages:
   - build
-  - test_unit
-  - test_unit_memory
+  - test
 
-build:
+build:default:
   stage: build
   script:
-    - mkdir build
-    - cd build
-    - "CC=clang cmake -DENABLE_BUILD_TESTS=ON .."
-    - make
+    - mkdir build && cd build
+    - CC=clang cmake -DENABLE_BUILD_TESTS=ON ..
+    - make 
   artifacts:
     paths:
       - build/
 
-build_sanitized:
+build:sanitized:
   stage: build
   script:
-    - mkdir build_sanitized
-    - cd build_sanitized
-    - "CC=clang cmake -DCMAKE_C_FLAGS=\"-fsanitize=address,undefined\" -DENABLE_SANITIZER=ON .."
+    - mkdir build_sanitized && cd build_sanitized
+    - CC=clang cmake -DCMAKE_C_FLAGS=\"-fsanitize=address,undefined\" -DENABLE_SANITIZER=ON ..
     - make
   artifacts:
     paths:
       - build_sanitized/
 
-build_sanitized_memory:
+build:sanitized_memory:
   stage: build
   script:
-    - mkdir build_sanitized_memory
-    - cd build_sanitized_memory
-    - "CC=clang cmake -DCMAKE_C_FLAGS=\"-fsanitize=memory\" -DENABLE_SANITIZER=ON .."
+    - mkdir build_sanitized_memory && cd build_sanitized_memory
+    - CC=clang cmake -DCMAKE_C_FLAGS=\"-fsanitize=memory\" -DENABLE_SANITIZER=ON ..
     - make
   artifacts:
     paths:
       - build_sanitized_memory/
 
-
-test_unit:
-  stage: test_unit
+test:default:
+  stage: test
   script:
     - cd build
     - ctest -T test --output-on-failure
@@ -46,29 +50,29 @@ test_unit:
     paths:
       - build/
 
-test_unit_valgrind:
-  stage: test_unit_memory
+test:sanitized:
+  stage: test
+  script:
+    - cd build_sanitized
+    - ctest -T test --output-on-failure
+  artifacts:
+    paths:
+      - build_sanitized/
+
+test:sanitized_memory:
+  stage: test
+  script:
+    - cd build_sanitized_memory
+    - ctest -T test --output-on-failure
+  artifacts:
+    paths:
+      - build_sanitized_memory/
+
+test:valgrind:
+  stage: test
   script:
     - cd build
     - ctest -T memcheck
   artifacts:
     paths:
       - build/
-
-test_unit_sanitized:
-  stage: test_unit_memory
-  script:
-    - cd build_sanitized
-    - ctest -T test --output-on-failure
-  artifacts:
-    paths:
-      - build_sanitized/
-
-test_unit_sanitized_memory:
-  stage: test_unit_memory
-  script:
-    - cd build_sanitized_memory
-    - ctest -T test --output-on-failure
-  artifacts:
-    paths:
-      - build_sanitized_memory/
