--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SOURCES
     src/utils/memory.c
     src/utils/ntp/server_list.c
     src/utils/dns/resolv_conf.c
+    src/utils/dns/search.c
 )
 
 if (NOT PLUGIN)
@@ -48,6 +49,7 @@ set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${CMAKE_PROJE
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules")
 find_package(SYSREPO REQUIRED)
 find_package(LIBYANG REQUIRED)
+find_package(LIBSYSTEMD)
 
 target_link_libraries(
     ${PROJECT_NAME}
@@ -59,6 +61,12 @@ include_directories(
     ${SYSREPO_INCLUDE_DIRS}
     ${LIBYANG_INCLUDE_DIRS}
 )
+
+if(SYSTEMD_FOUND)
+    add_compile_definitions(SYSTEMD=1)
+    target_link_libraries(${CMAKE_PROJECT_NAME} ${SYSTEMD_LIBRARIES})
+    include_directories(${SYSTEMD_INCLUDE_DIRS})    
+endif()
 
 if(ENABLE_BUILD_TESTS)
 	find_package(CMOCKA REQUIRED)
