--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: "debian:sid"
 
 before_script:
   - apt-get update
-  - apt-get -y install git clang cmake libcmocka0 libcmocka-dev valgrind libsystemd-dev
+  - apt-get -y install git clang cmake libcmocka0 libcmocka-dev valgrind libsystemd-dev libpcre3-dev
 
   # prepare for building debian packages
   #- apt-get -y install git build-essential fakeroot devscripts
