plugin refactor: split general.c into multiple files and replace static variables with a context

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ include_directories(
 
 set(SOURCES
     src/general.c
+    src/common.c
+    src/callbacks.c
+    src/initial_load.c
     src/utils/memory.c
     src/utils/ntp/server_list.c
     src/utils/dns/resolv_conf.c
