--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/uthash"]
 	path = deps/uthash
 	url = https://github.com/troydhanson/uthash
+[submodule "deps/sysrepo-plugins-common"]
+	path = deps/sysrepo-plugins-common
+	url = https://github.com/mcindrich/sysrepo-plugins-common
