system-plugin: refactor dns-resolver change API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,15 +16,13 @@ set(SOURCES
     src/system.c
     src/ly_tree.c
     src/startup.c
+    src/dns_resolver.c
     src/utils/memory.c
 
     # subs
     src/subscription/change.c
     src/subscription/operational.c
     src/subscription/rpc.c
-
-    # change parts
-    src/subscription/change/dns_resolver.c
 )
 
 if (NOT PLUGIN)
