system-plugin: compile authentication store API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ set(
     src/system/dns_resolver/api/store.c
     src/system/dns_resolver/api/change.c
     src/system/authentication/api/load.c
+    src/system/authentication/api/store.c
 )
 
 if (NOT PLUGIN)
