system-plugin: add ntp API files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,10 @@ set(
     src/system/api/check.c
     src/system/api/store.c
     src/system/api/change.c
+    src/system/api/ntp/load.c
+    src/system/api/ntp/check.c
+    src/system/api/ntp/store.c
+    src/system/api/ntp/change.c
     src/system/api/dns_resolver/load.c
     src/system/api/dns_resolver/check.c
     src/system/api/dns_resolver/store.c
