system-plugin: implement authorized key list functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ set(
     src/system/data/ntp/server/list.c
     src/system/data/authentication/authorized_key.c
     src/system/data/authentication/authorized_key/array.c
+    src/system/data/authentication/authorized_key/list.c
     src/system/data/authentication/local_user.c
     src/system/data/authentication/local_user/array.c
     src/system/data/authentication/local_user/list.c
