system-plugin: implement initial change callbacks for authentication

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(
     src/system/api/authentication/load.c
     src/system/api/authentication/check.c
     src/system/api/authentication/store.c
+    src/system/api/authentication/change.c
 )
 
 if(NOT PLUGIN)
