--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,13 +22,13 @@ before_script:
   - pip3 install libyang
   - pip3 install Jinja2
 
-build:
+build:default:
   stage: build
 
   script:
     # build system plugin
     - mkdir build
-    - cmake -DSYSTEMD_IFINDEX=1 -DCMAKE_C_COMPILER=clang -S . -B build/
+    - cmake -S . -B build/ -DSYSTEMD_IFINDEX=1 -DCMAKE_C_COMPILER=clang
     - cmake --build build/
   
   artifacts:
