Add sanitized build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,6 @@ build:default:
   stage: build
 
   script:
-    # build system plugin
     - mkdir build
     - cmake -S . -B build/ -DSYSTEMD_IFINDEX=1 -DCMAKE_C_COMPILER=clang
     - cmake --build build/
@@ -34,3 +33,14 @@ build:default:
   artifacts:
     paths:
       - build/
+
+build:sanitized:
+  stage: build
+
+  script:
+    - mkdir build-sanitized
+    - cmake -S . -B build-sanitized/ -DSYSTEMD_IFINDEX=1 -DCMAKE_C_COMPILER=clang -DCMAKE_C_FLAGS=\"-fsanitize=address,undefined\" -DENABLE_SANITIZER=ON
+    - cmake --build build-sanitized/
+  artifacts:
+    paths:
+      - build-sanitized/
