--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ stages:
 # install libraries
 before_script:
   - apt-get update
-  - apt-get -y install clang cmake git libpcre2-dev libsystemd-dev
+  - apt-get -y install clang cmake git libpcre2-dev libsystemd-dev libcmocka0 libcmocka-dev valgrind
   - apt-get -y install python3 python3-pip
   - git clone https://github.com/CESNET/libyang.git
   - git clone https://github.com/sysrepo/sysrepo.git
