CI/CD: log ctest output

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ test:default:
   needs: ["build:default"]
   script:
     - cd build
-    - ctest
+    - ctest -V
   artifacts:
     paths:
       - build/
