--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,3 +66,39 @@ test:default:
   artifacts:
     paths:
       - build/
+
+test:sanitized:
+  stage: test
+
+  needs: ["build:sanitized"]
+
+  script:
+    - cd build-sanitized
+    - ctest -V
+  artifacts:
+    paths:
+      - build-sanitized/
+
+test:sanitized_memory:
+  stage: test
+
+  needs: ["build:sanitized_memory"]
+
+  script:
+    - cd build-sanitized-memory
+    - ctest -V
+  artifacts:
+    paths:
+      - build-sanitized-memory/
+
+test:valgrind:
+  stage: test
+
+  needs: ["build:default"]
+  
+  script:
+    - cd build
+    - ctest -T memcheck -V
+  artifacts:
+    paths:
+      - build/
