unit-testing: move unit testing files to new directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,5 +97,5 @@ endif()
 if(ENABLE_BUILD_TESTS)
     find_package(CMOCKA REQUIRED)
     include(CTest)
-    include(tests/Tests.cmake)
+    include(tests/unit/Tests.cmake)
 endif()
