system-plugins: split augeas based and non-augeas based code between plugins

--- a/src/plugins/ietf-system/CMakeLists.txt
+++ b/src/plugins/ietf-system/CMakeLists.txt
@@ -19,6 +19,8 @@ set(
     PLUGIN_SOURCES
 
     plugin.c
+    datastore/running/load.c
+    datastore/running/store.c
 )
 
 # check for systemd flag
