--- a/src/plugins/ietf-system-augeas/CMakeLists.txt
+++ b/src/plugins/ietf-system-augeas/CMakeLists.txt
@@ -19,6 +19,8 @@ set(
     PLUGIN_SOURCES
 
     plugin.c
+    datastore/running/load.c
+    datastore/running/store.c
 )
 
 # add plugin as a sysrepo-plugind library
